--- a/index.qmd
+++ b/index.qmd
@@ -20,13 +20,14 @@ about:
 
 # Welcome to my website !
 
-I am a first year PhD candidate in Economics at the University of Lausanne (HEC) and currently enrolled in the Swiss Program for Beginning Doctoral Students in Economics at Study Center Gerzensee (Foundation of the Swiss National Bank).
+I am a first year PhD candidate in Economics at the University of Lausanne (HEC) under the supervision of [Professor Kenza Benhima](https://sites.google.com/site/benhimakenza/) (UNIL) and [Professor Sylvia Kaufmann](https://szgerzensee.ch/about/staff/sylvia-kaufmann) (Study Center Gerzensee). I am also scientific collaborator at the [Swiss Institute of Applied Economics (CREA)](https://www.unil.ch/crea/home.html). I have succesfully completed the [Swiss Program
+for Beginning Doctoral Students in Economics](https://szgerzensee.ch/courses/swiss-program-for-beginning-doctoral-students-in-economics/alumni-1) at Study Center Gerzensee (Foundation of the Swiss National Bank).
 
 I hold a dual master's degree in Economics and Business Administration from the University of Lausanne (HEC). I have advanced programming (R addict and Matlab/Dynare enthusiast) and econometrics/modelling skills.
 
-My main research interests include climate change economics, international macroeconomics, monetary policy transmission, macro-finance, time series analysis for forecasting.
+My main research interests include International Macroeconomics and Finance (Expectations, Exchange rates, Capital flows), Geoeconomics, Macroeconomics of Energy Security and Climate Change, Applied Time Series Econometrics (Shock identification, Bayesian methods, Forecasting)
 
-My experience includes research positions as a trainee at the [European Central Bank](https://www.ecb.europa.eu/home/html/index.en.html), at [the National Bank of Romania](https://www.bnr.ro/National-Bank-of-Romania-1144-Mobile.aspx) and at the [Swiss Institute of Applied Economics (CREA)](https://www.unil.ch/crea/home.html). I was also economic consultant intern at [Panthéon Recherche](https://www.pantheon-recherche.com/).
+My experience includes research positions as a trainee at the [European Central Bank](https://www.ecb.europa.eu/home/html/index.en.html), at [the National Bank of Romania](https://www.bnr.ro/National-Bank-of-Romania-1144-Mobile.aspx). I was also economic consultant intern at [Panthéon Recherche](https://www.pantheon-recherche.com/).
 
 Outside academia, I am the author of the economics textbook ["L'Economie en 50 graphiques"](https://www.dunod.com/prepas-concours/economie-en-50-graphiques-pour-reussir-vos-concours), widely available in French bookstores and consistently ranked among the top 10 economics student books in France.
 
