--- a/index.qmd
+++ b/index.qmd
@@ -25,7 +25,7 @@ for Beginning Doctoral Students in Economics](https://szgerzensee.ch/courses/swi
 
 I hold a dual master's degree in Economics and Business Administration from the University of Lausanne (HEC). I have advanced programming (R addict and Matlab/Dynare enthusiast) and econometrics/modelling skills.
 
-My main research interests include International Macroeconomics and Finance (Expectations, Exchange rates, Capital flows), Geoeconomics, Macroeconomics of Energy Security and Climate Change, Applied Time Series Econometrics (Shock identification, Bayesian methods, Forecasting)
+My main research interests and obsessions include International Macroeconomics and Finance (Expectations, Exchange rates, Capital flows), Geoeconomics, Macroeconomics of Energy Security and Climate Change, Applied Time Series Econometrics (Shock identification, Bayesian methods, Forecasting)
 
 My experience includes research positions as a trainee at the [European Central Bank](https://www.ecb.europa.eu/home/html/index.en.html), at [the National Bank of Romania](https://www.bnr.ro/National-Bank-of-Romania-1144-Mobile.aspx). I was also economic consultant intern at [Panthéon Recherche](https://www.pantheon-recherche.com/).
 
